iOS: Update pixel density (PPI) logic to detect new iOS devices

Since the iPhone 6(S) Plus devices have a PPI of 401, we change the
logic from storing the unscaled PPI to storing the scaled PPI, and
applying that to a scaled geometry when computing the physical size.

Task-number: QTBUG-49467
Change-Id: I1741ff075749a301d2434cd35f642fcc9ea4b581
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@theqtcompany.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@theqtcompany.com>

cregit: 2ab6963e9597f42609632ff25a696b14a63d2fd8 https://github.com/qt/qtbase/commit/2ab6963e9597f42609632ff25a696b14a63d2fd8